--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,5 @@
 {
-  "presets": [
-    "next/babel"
-  ],
+"presets": [ "./babel-preset" ],
   "plugins": [
     ["styled-components", { "ssr": true, "displayName": true, "preprocess": false } ]
   ]
