--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "next": "latest",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "styled-components": "^2.0.0-17"
+    "styled-components": "latest",
+    "styled-jsx": "latest"
   },
   "author": "",
   "license": "ISC"
